--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/uber_api?useSSL=false
     username: root
-    password: 290103
+    password: trinhthuphuong
 
 
 
